# foliate

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  REFACTORING.md  pyproject.toml
.github/workflows/: ci.yml
design/: foliate.af  foliate2.af
docs/: customization.md  nl2br-investigation.md  releasing.md  slugified-urls.md  themes.md
docs/examples/: analytics.md  custom-footer.md  sidebar.md  subscription-cta.md
docs/releases/: 0.9.0.md
specs/: atom-feed.md
src/foliate/: __init__.py  __main__.py  assets.py  build.py  cache.py  cli.py  config.py  deploy.py  doctor.py  feed.py  logging.py  markdown_utils.py  obsidian_image_size.py  page.py  postprocess.py  published_assets.py  quarto.py  quarto_renderer.py  resources.py  status.py  templates.py  watch.py
src/foliate/defaults/: __init__.py  config.toml
src/foliate/defaults/static/: __init__.py  main.css
src/foliate/defaults/templates/: __init__.py  feed.xml  index.html  layout.html  page.html
tests/: __init__.py  test_assets.py  test_build.py  test_cache.py  test_clean_command.py  test_cli.py  test_config.py  test_deploy.py  test_doctor.py  test_feed.py  test_logging.py  test_makefile.py  test_markdown_utils.py  test_obsidian_image_size.py  test_page.py  test_postprocess.py  test_published_assets.py  test_quarto.py  test_quarto_renderer.py  test_resources.py  test_status.py  test_templates.py  test_watch.py
